# ContextOS

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RISK_REGISTER.md  ROADMAP.md  SECURITY.md  TASKS.md  TEST_PLAN.md  demo.tape  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
contextos/: __init__.py
contextos/cli/: __init__.py  main.py
contextos/cli/commands/: export.py  init.py  memory.py  pack.py  scan.py  serve.py  task.py
contextos/core/: __init__.py  ast_extractor.py  compression.py  context_selector.py  dependency_graph.py  git_churn.py  headroom_adapter.py  initializer.py  pack_builder.py  repo_index.py  safety.py  scanner.py  secret_detector.py  summarizer.py  token_counter.py
contextos/exporters/: __init__.py  aider.py  base.py  claude.py  codex.py  cursor.py
contextos/mcp/: server.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FAQ.md  HEADROOM.md  INSTALL.md  MCP.md  MCP_SETUP.md  ROADMAP.md  SAFETY.md  USAGE.md  WHY.md  index.md
examples/: README.md
examples/monorepo/: README.md  package.json
examples/python_fastapi/: README.md  requirements.txt
examples/python_fastapi/app/: auth.py  database.py  main.py  models.py
examples/python_fastapi/app/routes/: items.py  users.py
examples/python_fastapi/tests/: conftest.py  test_auth.py  test_users.py
examples/react_typescript/: README.md  package.json
examples/react_typescript/src/: App.tsx
examples/react_typescript/src/api/: client.ts
examples/react_typescript/src/components/Auth/: LoginForm.test.tsx  LoginForm.tsx
examples/react_typescript/src/components/Dashboard/: Dashboard.tsx
examples/react_typescript/src/hooks/: useApi.ts  useAuth.ts
examples/react_typescript/src/types/: index.ts
tests/: conftest.py
tests/cli/: test_commands.py  test_imports.py  test_init.py  test_memory.py  test_pack.py  test_task.py
tests/core/: test_ast_extractor.py  test_compression.py  test_context_selector.py  test_dependency_graph.py  test_repo_index.py  test_scanner.py  test_secret_detector.py  test_summarizer.py  test_token_counter.py
tests/examples/: test_examples.py
tests/exporters/: test_exporters.py
