[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rm-contextos"
version = "0.1.1"
description = "A context operating system for AI coding agents"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Rohith Matam", email = "chintumatham@gmail.com" },
]
keywords = ["ai", "agents", "context", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/Rohithmatham12/ContextOS"
Repository = "https://github.com/Rohithmatham12/ContextOS"
Issues = "https://github.com/Rohithmatham12/ContextOS/issues"
Changelog = "https://github.com/Rohithmatham12/ContextOS/blob/master/CHANGELOG.md"

[project.scripts]
contextos = "contextos.cli.main:app"

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
]
tokens = [
    "tiktoken>=0.7",
]
headroom = [
    "headroom-ai>=0.1",
]
all = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tiktoken>=0.7",
    "headroom-ai>=0.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["contextos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"examples/python_fastapi/app/routes/*.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["contextos"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["examples/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["contextos"]
omit = ["tests/*"]
